# b-compiler

./: .GITIGNORE  .gitignore  README.md  notes.aux  notes.fdb_latexmk  notes.fls  notes.out  notes.tex
.github/workflows/: benchmarks.yml
b/: Cargo.toml
b/benches/: lexer_bench.rs  memory_bench.rs  parser_bench.rs  perf_bench.sh
b/src/: lib.rs  main.rs
b/src/ast/: mod.rs  pretty_printer.rs  visitor.rs
b/src/common/: span.rs
b/src/examples/: gt_lt.b  neg_int_lex.b  printer_test.b  printer_test2.b  printer_test3.b  stress_test.b
b/src/lexer/: mod.rs  scanner.rs  token.rs
b/src/parser/: expr.rs  mod.rs  precedence.rs  stmt.rs
b/src/sema/: mod.rs  symbol_table.rs
b/tests/: edge_cases.rs
docs/: .gitignore  gen_versions_index.sh  index.html  publish.sh
docs/benchmarks/: index.html
docs/benchmarks/e2e_large (1000 fns)/: index.html
docs/benchmarks/e2e_medium (200 fns)/: index.html
docs/benchmarks/lex_large (1000 fns)/: index.html
docs/benchmarks/lex_long_identifiers/: index.html
docs/benchmarks/lex_many_comments/: index.html
docs/benchmarks/lex_many_numbers/: index.html
docs/benchmarks/lex_many_strings/: index.html
docs/benchmarks/lex_medium (200 fns)/: index.html
docs/benchmarks/lex_tiny/: index.html
docs/benchmarks/parse_deep_expression (300)/: index.html
docs/benchmarks/parse_deep_nesting (200)/: index.html
docs/benchmarks/parse_large (1000 fns)/: index.html
docs/benchmarks/parse_many_calls (500)/: index.html
docs/benchmarks/parse_many_globals (300)/: index.html
docs/memory/: dhat-heap.json
(+3 files in other folders)
